fixed the white space problem

--- a/main.css
+++ b/main.css
@@ -44,6 +44,4 @@ upload-buttons{
 
 .canvas-box {
     border: solid 1px black;
-    width: 300px;
-    height: 300px;
 }
